-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 18, 19
-
Component/s: hotspot
-
b09
-
s390x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8281578 | 17.0.3 | Martin Doerr | P4 | Resolved | Fixed | b02 |
| JDK-8281583 | 11.0.15 | Martin Doerr | P4 | Resolved | Fixed | b02 |
assert(state->magic == (intptr_t) frame::z_istate_magic_number) failed: wrong z_ijava_state in interpreter frame (no magic found)
This is only reliable after frame valid verification, not for potentially incomplete frames.
In addition, the pc requires null check before using it in a frame constructor (see PPC64 fix in
- backported by
-
JDK-8281578 [s390] JFR runs into assertions while validating interpreter frames
-
- Resolved
-
-
JDK-8281583 [s390] JFR runs into assertions while validating interpreter frames
-
- Resolved
-
- relates to
-
JDK-8279924 [PPC64, s390] implement frame::is_interpreted_frame_valid checks
-
- Resolved
-
-
JDK-8280155 [PPC64, s390] frame size checks are not yet correct
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/f4e14a68
-
Commit
openjdk/jdk17u-dev/a5d00fb0
-
Commit
openjdk/jdk/7f19c700
-
Review
openjdk/jdk11u-dev/811
-
Review
openjdk/jdk17u-dev/149
-
Review
openjdk/jdk/7312