8281061: [s390] JFR runs into assertions while validating interpreter frames